# ai4-papi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  codemeta.json  pyproject.toml  release-please-config.json  requirements.txt  ruff.toml  setup.cfg  setup.py  template.env  tox.ini
.github/workflows/: build-ai4eosc-dev-api.yml  build-ai4eosc-prod-api.yml  build-docker-dev.yml  build-docker-prod.yml  ci.yml  release-please.yml
ai4eosc/: auth.py  cli.py  conf.py  flaat_impl.py  init_flaat.py  main.py
ai4eosc/routers/: deployments.py  info.py  modules.py
ai4papi/: __init__.py  auth.py  cli.py  conf.py  main.py  module_patches.py  name_generator.py  quotas.py  ruff.toml  utils.py  version.py  wattnet.py  wattprint.py
ai4papi/nomad/: common.py  patches.py
ai4papi/routers/: __init__.py  deployments.py  info.py
ai4papi/routers/v1/: __init__.py  batch.py  deployments.py  inference.py  info.py  modules.py  secrets.py  snapshots.py  storage.py
ai4papi/routers/v1/catalog/: __init__.py  common.py  modules.py  refresh.py  tools.py
ai4papi/routers/v1/catalog/datasets/: __init__.py  zenodo.py
ai4papi/routers/v1/deployments/: __init__.py  common.py  modules.py  tools.py
ai4papi/routers/v1/inference/: __init__.py  nomad.py  oscar.py
ai4papi/routers/v1/llm/: __init__.py  chat.py  keys.py
ai4papi/routers/v1/proxies/: __init__.py  ai4_llm.py  apisix.py  lite_llm.py  zenodo.py
ai4papi/routers/v1/snapshots/: __init__.py  snapshots.py
ai4papi/routers/v1/stats/: __init__.py  deployments.py  gpu_flavors.csv  modules.py
ai4papi/routers/v1/try_me/: __init__.py  nomad.py
ai4papi/tests/: main.py  routes.py
ai4papi/tests/catalog/: modules.py  tools.py
ai4papi/tests/deployments/: tools.py
docker/: Dockerfile  docker-compose.yml  docker_refresh.sh  old-docker-compose.yml
etc/: job.nomad  main.yaml  main_conf.yaml  main_tmp.yaml  oscar.yaml  userconf.yaml  vllm.yaml
etc/federated/: federated.yaml
etc/inference/: nomad.hcl  user.yaml
etc/module/: module.nomad  module.yaml
etc/modules/: job.nomad  nomad.hcl  user.yaml
etc/oscar/: service.yaml  user.yaml
etc/snapshots/: nomad.hcl
etc/tools/ai4-cvat/: nomad.hcl  user.yaml
etc/tools/ai4-llm/: nomad.hcl  user.yaml
etc/tools/ai4os-ai4life-loader/: nomad.hcl  user.yaml
etc/tools/ai4os-cvat/: nomad.hcl  user.yaml
etc/tools/ai4os-dev-env/: nomad.hcl  user.yaml
etc/tools/ai4os-federated-server/: nomad.hcl  user.yaml
etc/tools/ai4os-llm/: nomad.hcl  user.yaml
etc/tools/ai4os-nvflare/: nomad.hcl  user.yaml
etc/tools/deep-oc-federated-server/: job.nomad  nomad.hcl  user.yaml
etc/tools/deep-oc-kafka/: nomad.hcl  user.yaml
etc/try_me/: nomad.hcl
tests/: conf.py  main.py  routes.py  test_ai4llm.py  test_auth.py  test_batch.py  test_catalog_modules.py  test_catalog_tools.py  test_deployments_modules.py  test_deployments_tools.py  test_launch.py  test_llm.keys.py  test_llm_chat.py  test_llm_keys.py  test_meta.py  test_oscar.py  test_routes.py  test_secrets.py  test_snapshots.py  test_stats.py  test_storage.py  test_tryme.py
tests/catalog/: datasets.py  modules.py  tools.py
tests/deployments/: modules.py  tools.py
tests/inference/: nomad-test.py  oscar.py
tests/proxies/: ai4_llm.py
tests/try_me/: test_nomad.py
var/: datacenters.csv  datacenters_info.csv  gpu_models.csv
