[build-system]
requires = ["setuptools", "wheel", "pbr>=6.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4papi"
description = "An API for interacting with the AI4EOSC services."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI4EOSC collaboration", email = "ai4eosc-support@listas.csic.es"}
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "pbr>=5.3.0,<6.0",
    "pyyaml>=6.0.1,<7.0",
    "cachetools>=5.3.0,<6.0",
    "requests>=2.25.1,<3.0",
    "python-nomad==2.0.0",
    "fastapi>=0.104.1,<1.0",
    "fastapi-utils[all]>=0.7.0,<1.0",
    "uvicorn[standard]>=0.20.0,<1.0",
    "PyJWT>=2.6.0,<3.0",
    "cryptography>=41.0.5",
    "click==8.2.1",
    "typer>=0.7.0,<1.0",
    "oscar_python==1.3.1",
    "hvac>=2.1.0,<3.0",
    "pydantic>=2.5.2,<3.0",
    "natsort>=8.1.0,<9.0",
    "ai4_metadata>=2.0.2,<3.0",
    "harborapi>=0.26.1,<1.0",
    "httpx==0.27.2",
    "openai>=1.70.0,<2.0",
    "python-multipart>=0.0.9,<1.0",
]

[tool.setuptools.dynamic]
version = {attr = "ai4papi.version.release_string"}

[project.urls]
Homepage = "https://github.com/ai4eosc/ai4-papi"

[project.scripts]
ai4papi-run = "ai4papi.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai4papi"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/main.py" = ["E402", "F401"]