[metadata]
name = ai4eosc
summary = A library for interacting with the AI4EOSC services.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
version = 0.1.0

author = AI4EOSC collaboration
author-email = ai4eosc-support@listas.csic.es
home-page = https://github.com/ai4eosc/ai4eosc

python-requires = >=3.7

license = Apache-2
license_file = LICENSE

classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    ai4eosc
