[metadata]
name = ai4papi
summary = An API for interacting with the AI4EOSC services.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = AI4EOSC collaboration
author-email = ai4eosc-support@listas.csic.es
home-page = https://github.com/ai4eosc/ai4-papi

python-requires = >=3.7

license = Apache-2
license_file = LICENSE

classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    ai4papi

[entry_points]
console_scripts =
    ai4papi-run = ai4papi.cli:run
